engine-net-2/tests/negative/NegAndHom.grs.data
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
1
1
True
4
4
True
4
4
True
4
4
True
4
4
True
4
4
